src/objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>AccountDischarge_Facility__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AccountDischarge Facility</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AdAlertSecondaryIns__c</fullName>
        <formula>IF(ISBLANK(Secondary_Insurance_Company__c ), &quot;&quot; , &quot; Secondary: &quot; + Secondary_Insurance_Company__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AdAlertSecondaryIns</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_two__c</fullName>
        <label>Address two</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Admission_Alert_Date__c</fullName>
        <formula>IF(MONTH(Scheduled_Admission_Date__c ) &lt; 10, &apos;0&apos;+TEXT(MONTH(Scheduled_Admission_Date__c )), TEXT(MONTH(Scheduled_Admission_Date__c )) )
+&apos;/&apos;+
IF(DAY(Scheduled_Admission_Date__c ) &lt; 10, &apos;0&apos;+TEXT(DAY(Scheduled_Admission_Date__c )), TEXT(DAY(Scheduled_Admission_Date__c )) )
+&apos;/&apos;+
TEXT(YEAR(Scheduled_Admission_Date__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Admission Alert Date</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Admission_Alert_Fx__c</fullName>
        <formula>IF(INCLUDES(Facility_Interest__c, &quot;Haven Detox&quot;), &quot;Haven&quot;,
IF(INCLUDES(Facility_Interest__c, &quot;Indiana Center for Recovery&quot;), &quot;ICFR&quot;, 
IF(INCLUDES(Facility_Interest__c, &quot;Recovery Team&quot;), &quot;TRT&quot;,
IF(INCLUDES(Facility_Interest__c, &quot;Lake Ave&quot;), &quot;Lake Ave&quot;, &quot;TBD&quot;))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Admission Alert Fx</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Admission_Alert_LOC__c</fullName>
        <formula>IF(INCLUDES(Level_of_Care__c, &quot;Detox&quot;), &quot;Detox&quot;,
IF(INCLUDES(Level_of_Care__c, &quot;Residential&quot;), &quot;Residential&quot;,
IF(INCLUDES(Level_of_Care__c, &quot;PHP&quot;), &quot;PHP&quot;,
IF(INCLUDES(Level_of_Care__c, &quot;IOP&quot;), &quot;IOP&quot;,
IF(INCLUDES(Level_of_Care__c, &quot;OPT&quot;), &quot;OPT&quot;,
IF(INCLUDES(Level_of_Care__c, &quot;TBD&quot;), &quot;TBD By UR&quot;, &quot;0&quot;))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Admission Alert LOC</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Admission_Alert_Payment__c</fullName>
        <formula>CASE( Payment_Method__c , &quot;Health Insurance&quot; , &quot;Health Insurance:&quot; +  Insurance_Company_Name__c , &quot;Private Pay&quot; , &quot;Private Pay&quot;, &quot;Scholarship&quot; , &quot;Scholarship&quot; ,&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Admission Alert Payment</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Admission_Alert_Ref_or_CTM_Source__c</fullName>
        <formula>IF(ISBLANK(Referral_Source__r.Name) ,  CTM_Source__c  ,  Referral_Source__r.Name )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Admission Alert Ref or CTM Source</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Admission_Approved_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Admission Approved Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Admission_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Admission Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Admission_Facility__c</fullName>
        <label>Admission Facility</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Haven Detox</fullName>
                </value>
                <value>
                    <fullName>Indiana Center for Recovery</fullName>
                </value>
                <value>
                    <fullName>Recovery Team</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Admission_ID_Temp__c</fullName>
        <label>Admission_ID_Temp</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Admission_Object_ID__c</fullName>
        <label>Admission Object ID</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Admission_Rep__c</fullName>
        <label>Admission Rep</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Test</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Admission_Rep_lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Admission Rep</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.Profile.Name</field>
                <operation>equals</operation>
                <value>Admissions</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Admissions_Alert_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Admission Alert Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Admitted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Admitted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Allow_Readmit__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Data coming back from EHR</description>
        <label>Allow Readmit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AltPhone__c</fullName>
        <label>Alternate Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Amount_Remaining__c</fullName>
        <label>Amount Remaining</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Approval_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approval Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Assessment_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Assessment Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Assessments_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Assessments Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BB_Chart_Status__c</fullName>
        <description>Chart Status for Bluebook</description>
        <label>BB Chart Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Waiting</fullName>
                </value>
                <value>
                    <fullName>Current</fullName>
                </value>
                <value>
                    <fullName>Archive</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BB_Facility__c</fullName>
        <formula>IF(INCLUDES(Facility_Interest__c, &quot;Haven Detox&quot;),1,
IF(INCLUDES(Facility_Interest__c, &quot;Recovery Team&quot;), 4,
IF(INCLUDES(Facility_Interest__c, &quot;Lake Ave&quot;), 5,
0 )))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BB Facility</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BB_Payment_Method__c</fullName>
        <formula>IF(AND( BB_Facility__c = 4,  TEXT(Payment_Method__c) = &quot;Health Insurance&quot;), 5,
IF(AND( BB_Facility__c = 4,  TEXT(Payment_Method__c) = &quot;Private Pay&quot;),7,
IF(AND( BB_Facility__c = 4,  TEXT(Payment_Method__c) = &quot;Scholarship&quot;),8,
IF(AND( BB_Facility__c = 1,  TEXT(Payment_Method__c) = &quot;Health Insurance&quot;),1,
IF(AND( BB_Facility__c = 1,  TEXT(Payment_Method__c) = &quot;Private Pay&quot;),2,
IF(AND( BB_Facility__c = 1,  TEXT(Payment_Method__c) = &quot;Scholarship&quot;),4,
IF(AND( BB_Facility__c = 5,  TEXT(Payment_Method__c) = &quot;Health Insurance&quot;),9,
IF(AND( BB_Facility__c = 5,  TEXT(Payment_Method__c) = &quot;Private Pay&quot;),10,
IF(AND( BB_Facility__c = 5,  TEXT(Payment_Method__c) = &quot;Scholarship&quot;),12,
0)))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BB Payment Method</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BB_State__c</fullName>
        <formula>CASE(TEXT(Patient_State_new__c) ,
&quot;AK&quot;,1,
&quot;AL&quot;,2,
&quot;AR&quot;,3,
&quot;AZ&quot;,4,
&quot;CA&quot;,5,
&quot;CO&quot;,6,
&quot;CT&quot;,7,
&quot;DC&quot;,8,
&quot;DE&quot;,9,
&quot;FL&quot;,10,
&quot;GA&quot;,11,
&quot;HI&quot;,12,
&quot;IA&quot;,13,
&quot;ID&quot;,14,
&quot;IL&quot;,14,
&quot;IN&quot;,15,
&quot;KS&quot;,16,
&quot;KY&quot;,17,
&quot;LA&quot;,18,
&quot;MA&quot;,19,
&quot;MD&quot;,20,
&quot;ME&quot;,21,
&quot;MI&quot;,22,
&quot;MN&quot;,23,
&quot;MO&quot;,24,
&quot;MS&quot;,25,
&quot;MT&quot;,26,
&quot;NC&quot;,27,
&quot;ND&quot;,28,
&quot;NE&quot;,29,
&quot;NH&quot;,30,
&quot;NJ&quot;,31,
&quot;NM&quot;,32,
&quot;NV&quot;,33,
&quot;NY&quot;,34,
&quot;OH&quot;,35,
&quot;OK&quot;,36,
&quot;OR&quot;,37,
&quot;PA&quot;,38,
&quot;RI&quot;,39,
&quot;SC&quot;,40,
&quot;SD&quot;,41,
&quot;TN&quot;,42,
&quot;TX&quot;,43,
&quot;UT&quot;,44,
&quot;VA&quot;,45,
&quot;VT&quot;,46,
&quot;WA&quot;,47,
&quot;WI&quot;,48,
&quot;WV&quot;,49,
&quot;WY&quot;,50,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BB State</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BB_Subscriber_Relationship__c</fullName>
        <formula>IF(AND(CONTAINS(Subscriber_Relationship__c, &quot;Parent: parent: PARENT&quot;), INCLUDES(Facility_Interest__c, &quot;Haven Detox&quot;)), 156,   
IF(AND(CONTAINS(Subscriber_Relationship__c, &quot;Parent: parent: PARENT&quot;), INCLUDES(Facility_Interest__c, &quot;Recovery Team&quot;)), 156,   
IF(AND(CONTAINS(Subscriber_Relationship__c, &quot;Parent: parent: PARENT&quot;), INCLUDES(Facility_Interest__c, &quot;Lake Ave&quot;)), 157,   
IF(AND(CONTAINS(Subscriber_Relationship__c, &quot;Self: self: SELF&quot;), INCLUDES(Facility_Interest__c, &quot;Haven Detox&quot;)), 1,   
IF(AND(CONTAINS(Subscriber_Relationship__c, &quot;Self: self: SELF&quot;), INCLUDES(Facility_Interest__c, &quot;Recovery Team&quot;)), 1,  
IF(AND(CONTAINS(Subscriber_Relationship__c, &quot;Self: self: SELF&quot;), INCLUDES(Facility_Interest__c, &quot;Lake Ave&quot;)), 26,
IF(AND(CONTAINS(Subscriber_Relationship__c, &quot;Spouse: spouse: SPOUSE&quot;), INCLUDES(Facility_Interest__c, &quot;Haven Detox&quot;)), 2, 
IF(AND(CONTAINS(Subscriber_Relationship__c, &quot;Spouse: spouse: SPOUSE&quot;), INCLUDES(Facility_Interest__c, &quot;Recovery Team&quot;)), 2, 
IF(AND(CONTAINS(Subscriber_Relationship__c, &quot;Spouse: spouse: SPOUSE&quot;), INCLUDES(Facility_Interest__c, &quot;Lake Ave&quot;)), 27, 
IF(AND(CONTAINS(Subscriber_Relationship__c, &quot;Child: child: CHILD&quot;), INCLUDES(Facility_Interest__c, &quot;Haven Detox&quot;)), 10,
IF(AND(CONTAINS(Subscriber_Relationship__c, &quot;Child: child: CHILD&quot;), INCLUDES(Facility_Interest__c, &quot;Recovery Team&quot;)), 10, 
IF(AND(CONTAINS(Subscriber_Relationship__c, &quot;Child: child: CHILD&quot;), INCLUDES(Facility_Interest__c, &quot;Lake Ave&quot;)), 17, 
IF(AND(NOT(CONTAINS(Subscriber_Relationship__c, &quot;Parent: parent: PARENT: Self: self: SELF: Spouse: spouse: SPOUSE: Child: child: CHILD&quot;)), INCLUDES(Facility_Interest__c, &quot;Lake Ave&quot;)), 25,
15)))))))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BB Subscriber Relationship</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BB_Subscriber_State__c</fullName>
        <formula>CASE(TEXT( Subscriber_State__c ) ,
&quot;Alaska&quot;,1,
&quot;Alabama&quot;,2,
&quot;Arkansas&quot;,3,
&quot;Arizona&quot;,4,
&quot;California&quot;,5,
&quot;Colorado&quot;,6,
&quot;Connecticut&quot;,7,
&quot;District of Columbia&quot;,8,
&quot;Delaware&quot;,9,
&quot;Florida&quot;,10,
&quot;Georgia&quot;,11,
&quot;Hawaii&quot;,12,
&quot;Iowa&quot;,13,
&quot;Idaho&quot;,14,
&quot;Illinois&quot;,15,
&quot;Indiana&quot;,16,
&quot;Kansas&quot;,17,
&quot;Kentucky&quot;,18,
&quot;Louisiana&quot;,19,
&quot;Massachusetts&quot;,20,
&quot;Maryland&quot;,21,
&quot;Maine&quot;,22,
&quot;Michigan&quot;,23,
&quot;Minnesota&quot;,24,
&quot;Missouri&quot;,25,
&quot;Mississippi&quot;,26,
&quot;Montana&quot;,27,
&quot;North Carolina&quot;,28,
&quot;North Dakota&quot;,29,
&quot;Nebraska&quot;,30,
&quot;New Hampshire&quot;,31,
&quot;New Jersey&quot;,32,
&quot;New Mexico&quot;,33,
&quot;Nevada&quot;,34,
&quot;New York&quot;,35,
&quot;Ohio&quot;,36,
&quot;Oklahoma&quot;,37,
&quot;Oregon&quot;,38,
&quot;Pennsylvania&quot;,39,
&quot;Rhode Island&quot;,40,
&quot;South Carolina&quot;,41,
&quot;South Dakota&quot;,42,
&quot;Tennessee&quot;,43,
&quot;Texas&quot;,44,
&quot;Utah&quot;,45,
&quot;Virginia&quot;,46,
&quot;Vermont&quot;,47,
&quot;Washington&quot;,48,
&quot;Wisconsin&quot;,49,
&quot;West Virginia&quot;,50,
&quot;Wyoming&quot;,51,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BB Subscriber State</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BC_PREFIX__c</fullName>
        <formula>IF (or( contains( Insurance_Company_Name__c , &quot;BC&quot;), contains ( Insurance_Company_Name__c , &quot;BCBS&quot;) , contains ( Insurance_Company_Name__c , &quot;Blue&quot;),CONTAINS (Insurance_Company_Name__c ,&quot;Anthem&quot;),contains ( Insurance_Company_Name__c , &quot;Empire&quot;)), LEFT( Member_ID_Number__c ,3),&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BC PREFIX</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bed__c</fullName>
        <label>Bed</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Test</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Budget_Confirmed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Budget Confirmed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CTM_Agent_Name__c</fullName>
        <label>CTM Agent Name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CTM_Call_Date__c</fullName>
        <label>CTM Call Date</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CTM_Call_ID2__c</fullName>
        <label>CTM Call ID2</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CTM_Call_ID__c</fullName>
        <label>CTM Call ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CTM_Campaign__c</fullName>
        <label>CTM Campaign</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CTM_Contact_Name2__c</fullName>
        <label>CTM Contact Name2</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CTM_Contact_Name__c</fullName>
        <label>CTM Contact Name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CTM_Conversion_Amount__c</fullName>
        <label>CTM Conversion Amount</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CTM_Conversion_Date__c</fullName>
        <label>CTM Conversion Date</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CTM_Converted__c</fullName>
        <label>CTM Converted</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CTM_Email__c</fullName>
        <label>CTM Email</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CTM_Landing_Page__c</fullName>
        <label>CTM Landing Page</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CTM_Length_of_Residence__c</fullName>
        <label>CTM Length of Residence</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CTM_Message_Body__c</fullName>
        <label>CTM Message Body</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CTM_Receiving_Number_Description__c</fullName>
        <label>CTM Receiving Number Description</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CTM_Recording_URL__c</fullName>
        <label>CTM Recording URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>CTM_Reporting_Tag__c</fullName>
        <label>CTM Reporting Tag</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CTM_Ring_Time2__c</fullName>
        <label>CTM Ring Time2</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CTM_Score__c</fullName>
        <label>CTM Score</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CTM_Source_Tag__c</fullName>
        <label>CTM Source Tag</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CTM_Source__c</fullName>
        <label>CTM Source</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CTM_Tags__c</fullName>
        <label>CTM Tags</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CTM_Talk_Time2__c</fullName>
        <label>CTM Talk Time2</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CTM_Talking_Source__c</fullName>
        <label>CTM Talking Source</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CTM_Total_Time__c</fullName>
        <label>CTM Total Time</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CTM_Tracking_Number__c</fullName>
        <label>CTM Tracking Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CTM_Tracking_Source_Description__c</fullName>
        <label>CTM Tracking Source Description</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CTM_Transcription_Text__c</fullName>
        <label>CTM Transcription Text</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CTM_Transfer_To__c</fullName>
        <label>CTM Transfer To</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CTM_Type__c</fullName>
        <label>CTM Type</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Call_ID__c</fullName>
        <label>Call ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Caller_ID_Caller_Phone__c</fullName>
        <label>Caller ID/Caller Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Chart_ID__c</fullName>
        <externalId>true</externalId>
        <label>Chart ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Cash__c</fullName>
        <label>Client Cash</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Client_Status__c</fullName>
        <label>Client Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Prospect</fullName>
                </value>
                <value>
                    <fullName>Client</fullName>
                </value>
                <value>
                    <fullName>Discharged</fullName>
                </value>
                <value>
                    <fullName>Referred</fullName>
                </value>
                <value>
                    <fullName>Termed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Closed_By_Text__c</fullName>
        <label>Closed By:</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Adolfo Castellano</fullName>
                </value>
                <value>
                    <fullName>Alex Torres</fullName>
                </value>
                <value>
                    <fullName>Alicia Reddy</fullName>
                </value>
                <value>
                    <fullName>Austin Thomas</fullName>
                </value>
                <value>
                    <fullName>Billy Briggs</fullName>
                </value>
                <value>
                    <fullName>Brian Cellary</fullName>
                </value>
                <value>
                    <fullName>CCR Employee</fullName>
                </value>
                <value>
                    <fullName>Call Center</fullName>
                </value>
                <value>
                    <fullName>Chanda Lynn</fullName>
                </value>
                <value>
                    <fullName>Chris Cosgrove</fullName>
                </value>
                <value>
                    <fullName>Chuck Dehnel</fullName>
                </value>
                <value>
                    <fullName>Colin Troy</fullName>
                </value>
                <value>
                    <fullName>Danielle Heule</fullName>
                </value>
                <value>
                    <fullName>David Kimelblatt</fullName>
                </value>
                <value>
                    <fullName>Ed Ainsely</fullName>
                </value>
                <value>
                    <fullName>Erik Pavao</fullName>
                </value>
                <value>
                    <fullName>Father John</fullName>
                </value>
                <value>
                    <fullName>Gary Robinson</fullName>
                </value>
                <value>
                    <fullName>Haven Employee</fullName>
                </value>
                <value>
                    <fullName>Haven Main</fullName>
                </value>
                <value>
                    <fullName>ICFR Employee</fullName>
                </value>
                <value>
                    <fullName>Jamie Berkoben</fullName>
                </value>
                <value>
                    <fullName>Jenna Duckworth</fullName>
                </value>
                <value>
                    <fullName>Josh Craig</fullName>
                </value>
                <value>
                    <fullName>Kevin King</fullName>
                </value>
                <value>
                    <fullName>Kirill</fullName>
                </value>
                <value>
                    <fullName>Kyle McHugh</fullName>
                </value>
                <value>
                    <fullName>Laura Kazimer</fullName>
                </value>
                <value>
                    <fullName>Lori McCord</fullName>
                </value>
                <value>
                    <fullName>Lucy</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Co_Insurance__c</fullName>
        <label>Co-Insurance</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Compliant_Name__c</fullName>
        <formula>First_Name_Opp_Parse__c &amp; LEFT(Last_Name_Opp_Parse__c, 4)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Compliant Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit_Card_Numer__c</fullName>
        <label>Credit Card Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_Status__c</fullName>
        <description>Current status for list views and current status of client</description>
        <label>Current Status</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DOA_to_Outbound_Referral_Facility__c</fullName>
        <label>DOA to Outbound Referral Facility</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DOB__c</fullName>
        <label>DOB</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_First_Contact__c</fullName>
        <label>Date First Contact</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <formula>TODAY()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Birth__c</fullName>
        <label>Date of Birth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Day_Today__c</fullName>
        <formula>DAY(TODAY())</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Day Today</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Deductible_In_Net__c</fullName>
        <label>Deductible (In Net)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Deductible_Met_In_Net__c</fullName>
        <label>Deductible Met (In Net)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Deductible_Met_Out_Net__c</fullName>
        <label>Deductible Met (Out Net)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Deductible_Out_Net__c</fullName>
        <label>Deductible (Out Net)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Deposit__c</fullName>
        <label>Deposit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Detox_Days_Authorized__c</fullName>
        <label>Detox Days Authorized</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Detox__c</fullName>
        <label>Detox</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Disable_Duplicate_Check__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disable Duplicate Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Discharge_Date__c</fullName>
        <label>Discharge Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Discharge_Facility__c</fullName>
        <label>Discharge Facility</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Discharge_To_Facility__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Discharge To Facility</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunities (Discharge To Facility)</relationshipLabel>
        <relationshipName>Opportunities4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Discharge_To__c</fullName>
        <label>Discharge To</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Discharge_Type__c</fullName>
        <label>Discharge Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Test</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Discovery_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Discovery Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Do_Not_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box if client does not want to be contacted</inlineHelpText>
        <label>Do Not Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DocuSign__c</fullName>
        <label>DocuSign</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Due_Day__c</fullName>
        <formula>DAY(SDOC_Due_Date__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Due Day</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Due_Month__c</fullName>
        <formula>CASE(MONTH(SDOC_Due_Date__c),
1, &quot;January&quot;,
2, &quot;February&quot;,
3, &quot;March&quot;,
4, &quot;April&quot;,
5, &quot;May&quot;,
6, &quot;June&quot;,
7, &quot;July&quot;,
8, &quot;August&quot;,
9, &quot;September&quot;,
10, &quot;October&quot;,
11, &quot;November&quot;,
12, &quot;December&quot;,
&quot;None&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Due Month</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Due_Year__c</fullName>
        <formula>TEXT(YEAR(SDOC_Due_Date__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Due Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Duplicate_Check_Index__c</fullName>
        <label>Duplicate Check Index</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EMR_Assesment__c</fullName>
        <label>EMR Assesment</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>ETA__c</fullName>
        <label>ETA</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Emergency_Contact_Email__c</fullName>
        <label>Emergency Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Emergency_Contact_Name__c</fullName>
        <label>Emergency Contact Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Emergency_Contact_Phone__c</fullName>
        <label>Emergency Contact Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Employer_Phone__c</fullName>
        <label>Employer Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Employer__c</fullName>
        <label>Employer Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ethnicity__c</fullName>
        <label>Ethnicity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>test</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Expiration_Date__c</fullName>
        <label>Expiration Date</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Facility_Confirmed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Facility Confirmed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Facility_Interest__c</fullName>
        <label>Facility Interest</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Haven Detox</fullName>
                </value>
                <value>
                    <fullName>Indiana Center for Recovery</fullName>
                </value>
                <value>
                    <fullName>Recovery Team</fullName>
                </value>
                <value>
                    <fullName>Lake Ave</fullName>
                </value>
                <value>
                    <fullName>TBD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Fee_Agreement_Signed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Fee Agreement Signed</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>